--- a/styles/base.css
+++ b/styles/base.css
@@ -691,6 +691,7 @@ label {
 }
 
 .lex-pronun {
+    font-family: Verdana, 'BibleForge Sans', 'Bitstream Vera Sans', 'DejaVu Sans', Arial, sans-serif;
     font-size: 14px;
     white-space: nowrap;
     /* Because this element can wrap if the word is long and the line height is rather large due to the large original word one the line above, */
