--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -428,6 +428,10 @@ body {
     color:      #3985A8;
 }
 
+.menu_item_line div {
+    border-top: 1px solid #A3A3A3;
+}
+
 
 .panel {
     display:    none;
