--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -906,14 +906,19 @@ h2 {
 
 
 .lang_en_em, .lang_en_em .verse_number, .lang_en_em .book, .lang_en_em .chapter, .lang_en_em .short_book, .lang_en_em .first_verse:first-letter, .lang_en_em .first_paragraph:first-letter, .lang_en_em .d {
-    /* Enable advanced OpenType typographic features in Mozilla. */
+    /* Enable advanced OpenType typographic features. */
     /* dlig = Discretionary Ligatures (combine certain characters, e.g., "ct") */
     /* ss01 = Stylistic Set 1 (e.g., long s (ſ)) */
+    /* clig = Common ligatures (e.g., "fi") */
+    /* hlig = Historical ligatures (e.g., ſl)*/
     /*NOTE: It would be nice to use lnum (Lining Figures), but it does not appear to work. */
     /*BUG Automatic conversion of short s's to long s's is not always correct. */
     /*    For example, Colossians is sometimes spelled "Coloſsians" and other times "Coloſſians." */
     /*    One true error is 2 Samuel 19:16 where "wass" is rendered "waß"; whereas the KJV 1611 has "wass," surprisingly. */
-    -moz-font-feature-settings: "dlig=1,ss01=1";
+    -webkit-font-feature-settings: "dlig" 1, "ss01" 1, "clig", "hlig";
+       -moz-font-feature-settings: "dlig" 1, "ss01" 1, "clig", "hlig";
+    /* This is just to be future comaptible since browsers do not currently use this. */
+            font-feature-settings: "dlig" 1, "ss01" 1, "liga", "clig", "hlig";
     font-family: 'IM Fell DW Pica', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif!important;
 }
 
