--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -785,16 +785,28 @@ label {
     
     cursor: pointer;
     
+    /* Prevent the user from selecting the text (though only when directly clicking it). */
+    /* This also prevent users from copying and text in Mozilla. */
+    user-select:           none;
+    -webkit-touch-callout: none;
+    -webkit-user-select:   none;
+    -moz-user-select:      none;
+    -ms-user-select:       none;
+    
     /* Apply transitions to all changes. */
     /* Transition for Mozilla (Firefox 4.0+) */
-    /*TODO: This code is used so often, it should be placed in a separate class. */
-    -moz-transition:    all .3s;
+    -moz-transition:    background .3s, color .3s;
     /* Transition for WebKit */
-    -webkit-transition: all .3s;
+    -webkit-transition: background .3s, color .3s;
     /* Transition for Opera 10.5+ */
-    -o-transition:      all .3s;
+    -o-transition:      background .3s, color .3s;
 }
 
+.more-button:active {
+    /* Emulate button pressing */
+    /*NOTE: There is another .more-button:active above. */
+    padding: 5px 3px 3px 5px;
+}
 
 /* This is an invisible element that is used to prevent real text from going over the more button. */
 .more-button-buffer {
