--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -772,8 +772,8 @@ label {
     bottom: 0;
     right:  0;
     
-    border-top:  1px solid #aaa;
-    border-left: 1px solid #aaa;
+    border-top:  1px solid rgba(0,0,0,.1);
+    border-left: 1px solid rgba(0,0,0,.1);
     border-radius: 5px 0 0 0;
     
     padding: 4px;
