--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -170,7 +170,7 @@ body {
     border-style:       solid;
     border-width:       1px;
     /* This gives the input box a slight 3D effect. */
-    border-color:       #A7A7A7 #CACACA #C3C3C3 #A1A19B;
+    border-color:       #BBB #CACACA #C3C3C3 #A1A19B;
     /* Rounded corners for Mozilla */
     -moz-border-radius: 15px;
     /* Rounded corners for Opera 10.5+, IE 9+, WebKit 532.5+ (Chrome 4, Safari 5), Gecko 2 (Mozilla 4.0) */
