--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -774,7 +774,7 @@ label {
     
     border-top:  1px solid rgba(0,0,0,.1);
     border-left: 1px solid rgba(0,0,0,.1);
-    border-radius: 5px 0 0 0;
+    border-radius: 9px 0;
     
     padding: 4px;
     
