--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -795,17 +795,19 @@ label {
     
     /* Apply transitions to all changes. */
     /* Transition for Mozilla (Firefox 4.0+) */
-    -moz-transition:    background .3s, color .3s;
+    -moz-transition:    background .2s, color .2s;
     /* Transition for WebKit */
-    -webkit-transition: background .3s, color .3s;
+    -webkit-transition: background .2s, color .2s;
     /* Transition for Opera 10.5+ */
-    -o-transition:      background .3s, color .3s;
+    -o-transition:      background .2s, color .2s;
 }
 
 .more-button:active {
     /* Emulate button pressing */
     /*NOTE: There is another .more-button:active above. */
     padding: 5px 3px 3px 5px;
+    /* The box shadow gives some depth to the button when it is pressed. */
+    box-shadow: inset 2px 2px 3px rgba(0,0,0,.2);
 }
 
 /* This is an invisible element that is used to prevent real text from going over the more button. */
